[gd_scene load_steps=2 format=3 uid="uid://21bicweef6vm"]

[ext_resource type="Script" uid="uid://c7l48jvqdgaqk" path="res://scripts/ui/options_menu.gd" id="1_6tw0m"]

[node name="pauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1_6tw0m")

[node name="TextureRect" type="ColorRect" parent="."]
modulate = Color(0.45490196, 0.45490196, 0.45490196, 0.49803922)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5137255)

[node name="Options" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.5
offset_top = -155.0
offset_right = 166.5
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8
alignment = 1

[node name="Continue" type="Button" parent="Options"]
layout_mode = 2
text = "Continue"

[node name="MainMenu" type="Button" parent="Options"]
layout_mode = 2
text = "Main Menu"

[node name="Options" type="Button" parent="Options"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="Options"]
layout_mode = 2
text = "Quit
"

[connection signal="pressed" from="Options/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Options/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Options/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Options/Quit" to="." method="_on_quit_pressed"]
